grid gap fix

--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -136,7 +136,8 @@
     flex-direction: column;
     margin-top: 5.5vh;
     width: 100%;
-margin-left: 0;
+    margin-left: 0;
+    grid-gap: 5vh;
   }
 
   #skills-img{
@@ -165,8 +166,12 @@ margin-top: 4vh;
 
 }
 
+
 .display {
-  margin-top: 5vh;
+  margin-top:0;
+}
+.skill-text {
+  font-size: 20px;
 }
 
 }
